# marketolog

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-07-phase1-foundation.md  2026-04-07-phase2-seo.md  2026-04-08-phase3-analytics.md  2026-04-08-phase4-content.md  2026-04-08-phase5-smm.md  2026-04-08-phase6-strategy.md  2026-04-08-phase7-pro-package.md
docs/superpowers/specs/: 2026-04-07-marketolog-design.md
pro/: pyproject.toml
pro/src/marketolog_pro/: __init__.py  _register.py
src/marketolog/: __init__.py  __main__.py  server.py
src/marketolog/core/: config.py  context.py  projects.py
src/marketolog/modules/analytics/: __init__.py  ai_referral.py  digest.py  funnel.py  metrika.py  search_console.py  traffic_sources.py  utm.py
src/marketolog/prompts/: analyst.md  content_writer.md  seo_expert.md  smm_manager.md  strategist.md
src/marketolog/utils/: auth.py  cache.py  formatting.py  http.py
tests/: conftest.py  test_pro_integration.py  test_server.py
tests/test_core/: test_config.py  test_context.py  test_projects.py
tests/test_modules/test_analytics/: conftest.py  test_ai_referral.py  test_digest.py  test_funnel.py  test_integration.py  test_metrika.py  test_search_console.py  test_traffic_sources.py  test_utm.py
tests/test_modules/test_content/: conftest.py  test_analyzer.py  test_generator.py  test_integration.py  test_meta.py  test_optimizer.py  test_planner.py
tests/test_modules/test_seo/: conftest.py  test_ai_seo.py  test_audit.py  test_competitors.py  test_integration.py  test_keywords.py  test_positions.py  test_webmaster.py
tests/test_modules/test_smm/: conftest.py  test_calendar.py  test_dzen.py  test_integration.py  test_max.py  test_telegram.py  test_trends.py  test_vk.py
tests/test_modules/test_strategy/: conftest.py  test_ai_visibility.py  test_audience.py  test_brand.py  test_channels.py  test_integration.py  test_intelligence.py  test_planning.py  test_positioning.py
tests/test_utils/: test_auth.py  test_cache.py  test_formatting.py  test_http.py
(+28 files in other folders)
