[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketolog"
version = "0.1.0"
description = "AI-маркетолог для бизнеса в Рунете — MCP-сервер для Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
trends = ["pytrends-modern>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
