[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketolog-pro"
version = "0.1.0"
description = "Pro-расширение для Marketolog — Content, SMM, Analytics, Strategy"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    "marketolog>=0.1.0",
]
